add a second layer to recommendation that uses previous experience. Organize files

--- a/collect_data.ipynb
+++ b/collect_data.ipynb
@@ -852,7 +852,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pickle.dump(country_df, open('countries.pkl', 'wb'))"
+    "#pickle.dump(country_df, open('data/countries.pkl', 'wb'))"
    ]
   },
   {
@@ -1943,7 +1943,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pickle.dump(city_df, open('cities.pkl', 'wb'))"
+    "#pickle.dump(city_df, open('data/cities.pkl', 'wb'))"
    ]
   },
   {
@@ -2328,7 +2328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pickle.dump(wiki_df, open('wiki_data.pkl', 'wb'))"
+    "#pickle.dump(wiki_df, open('data/wiki_data.pkl', 'wb'))"
    ]
   },
   {
