--- a/recommend_by_nearest_topic_score.ipynb
+++ b/recommend_by_nearest_topic_score.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The goal of this model will be to use a KNN approach. Will recommend the location with the highest probability."
+    "The goal of this model will be to use a Nearest Neighbors approach. Will recommend the location that has the closest cosine similariy."
    ]
   },
   {
@@ -16,19 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import NearestNeighbors\n",
     "import pickle\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from recommend import recommend_nn, get_random_recs, update_user_score, get_updated_n_recommendation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -215,186 +216,124 @@
        "28        0.144842  0.461146  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cities_with_scores = pickle.load(open('cities_with_topic_scores.pkl', 'rb'))\n",
+    "cities_with_scores = pickle.load(open('data/cities_with_topic_scores.pkl', 'rb'))\n",
     "cities_with_scores.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "topics = cities_with_scores.drop(['city', 'city_summary', 'country'], axis=1)\n",
-    "city = cities_with_scores['city']"
+    "city = cities_with_scores[['city', 'country']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nearest_neighbor = NearestNeighbors()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "NearestNeighbors(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-       "                 metric_params=None, n_jobs=None, n_neighbors=5, p=2,\n",
+       "NearestNeighbors(algorithm='auto', leaf_size=30, metric='cosine',\n",
+       "                 metric_params=None, n_jobs=None, n_neighbors=50, p=2,\n",
        "                 radius=1.0)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "nearest_neighbor = NearestNeighbors(n_neighbors=50, metric='cosine')\n",
     "nearest_neighbor.fit(topics)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "distances, closest_five = nearest_neighbor.kneighbors(np.array([0.8, .6, .7, 1, 0.3]).reshape(1, -1))"
+    "#pickle.dump(nearest_neighbor, open('models/nn_model.pkl', 'wb'))\n",
+    "nearest_neighbor = pickle.load(open('models/nn_model.pkl', 'rb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "45"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "closest_five\n",
-    "closest_five[0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Danube Valley'"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cities = []\n",
-    "city[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Cornwall', 'Ghent', 'Brighton', 'Istria', 'Black Forest']"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "for index in closest_five[0]:\n",
-    "    cities.append(city[index])\n",
-    "cities"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "distances = [distance for distance in distances[0]]"
+    "user_score = [.3, .3, .1, 1, .1]\n",
+    "closest_50 = recommend_nn(nearest_neighbor, city, user_score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1.1291682660325013,\n",
-       " 1.1365606603904412,\n",
-       " 1.1397251491537388,\n",
-       " 1.1404853763464895,\n",
-       " 1.1437710625654944]"
+       "array([('Honfleur', 'France'), ('Carcassonne', 'France'),\n",
+       "       ('D-Day Beaches', 'France'), ('Edinburgh', 'Scotland'),\n",
+       "       ('Nice', 'France')], dtype=object)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "distances"
+    "random_recs = get_random_recs(closest_50)\n",
+    "random_recs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Cornwall', 1.1291682660325013),\n",
-       " ('Ghent', 1.1365606603904412),\n",
-       " ('Brighton', 1.1397251491537388),\n",
-       " ('Istria', 1.1404853763464895),\n",
-       " ('Black Forest', 1.1437710625654944)]"
+       "[(('Reims & Verdun', 'France'), 0.005844356787242044),\n",
+       " (('Oban, Mull & Iona', 'Scotland'), 0.009694167677556487),\n",
+       " (('Lake Bled', 'Slovenia'), 0.013411734129390007),\n",
+       " (('Liverpool', 'England'), 0.013911526930349583),\n",
+       " (('Pisa', 'Italy'), 0.017456690379354822)]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(zip(cities, distances))"
+    "get_updated_n_recommendation(user_score, cities_with_scores, random_recs,\n",
+    "                             nearest_neighbor, city, \n",
+    "                             city_rating=[1, -1, 0, 1, 1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
