--- a/recommend_by_nearest_topic_score.ipynb
+++ b/recommend_by_nearest_topic_score.ipynb
@@ -24,13 +24,15 @@
     "import pickle\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from recommend import recommend_nn, get_random_recs, update_user_score, get_updated_n_recommendation"
+    "from recommend import get_initial_user_score, recommend_nn, get_random_recs, update_user_score, get_updated_n_recommendation, make_recommendations"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -243,13 +245,91 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Danube Valley</td>\n",
+       "      <td>Austria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hallstatt</td>\n",
+       "      <td>Austria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Salzburg</td>\n",
+       "      <td>Austria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Tirol</td>\n",
+       "      <td>Austria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Vienna</td>\n",
+       "      <td>Austria</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            city  country\n",
+       "0  Danube Valley  Austria\n",
+       "1      Hallstatt  Austria\n",
+       "2       Salzburg  Austria\n",
+       "3          Tirol  Austria\n",
+       "4         Vienna  Austria"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "text/plain": [
        "NearestNeighbors(algorithm='auto', leaf_size=30, metric='cosine',\n",
        "                 metric_params=None, n_jobs=None, n_neighbors=50, p=2,\n",
        "                 radius=1.0)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,69 +351,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "user_score = [.3, .3, .1, 1, .1]\n",
-    "closest_50 = recommend_nn(nearest_neighbor, city, user_score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rate on a scale of 0-10. 0 meaning not important and 10 meaning very important\n",
+      "How important is a forest/mountain setting: 1\n",
+      "How important is visiting palaces/castles: 1\n",
+      "How important is a costal/water setting: 1\n",
+      "How important is historical sites: 1\n",
+      "How important is an urban setting: 1\n",
+      "\n",
+      "\n",
+      "Rate ('St. Petersburg', 'Russia'): 1\n",
+      "Rate ('Berlin', 'Germany'): 1\n",
+      "Rate ('Rothenburg ob der Tauber', 'Germany'): 1\n",
+      "Rate ('Aran Islands', 'Ireland'): 1\n",
+      "Rate ('Ironbridge Gorge', 'England'): 1\n",
+      "Rate ('Warsaw', 'Poland'): 1\n",
+      "Rate ('Florence', 'Italy'): 1\n",
+      "Rate ('Córdoba', 'Spain'): 1\n",
+      "Rate ('Delft', 'Netherlands'): 1\n",
+      "Rate ('Languedoc-Roussillon', 'France'): 1\n",
+      "\n",
+      "\n",
+      "Rate ('Trier', 'Germany'): 1\n",
+      "Rate ('Windsor', 'England'): 1\n",
+      "Rate ('Nice', 'France'): 0\n",
+      "Rate ('Barcelona', 'Spain'): 0\n",
+      "Rate ('Portsmouth', 'England'): 0\n",
+      "Rate ('Assisi', 'Italy'): 0\n",
+      "Rate ('Oxford', 'England'): 0\n",
+      "Rate ('London', 'England'): 0\n",
+      "Rate ('Dover', 'England'): 0\n",
+      "Rate ('Aix-en-Provence', 'France'): 0\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([('Honfleur', 'France'), ('Carcassonne', 'France'),\n",
-       "       ('D-Day Beaches', 'France'), ('Edinburgh', 'Scotland'),\n",
-       "       ('Nice', 'France')], dtype=object)"
+       "[(('Nice', 'France'), 8.542202463557302e-05),\n",
+       " (('D-Day Beaches', 'France'), 0.00037095362344419236),\n",
+       " (('Annecy', 'France'), 0.0009906167687429024),\n",
+       " (('Barcelona', 'Spain'), 0.0017613015708727309),\n",
+       " (('Dover', 'England'), 0.0024208211292320314)]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "random_recs = get_random_recs(closest_50)\n",
-    "random_recs"
+    "make_recommendations(cities_with_scores, nearest_neighbor)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(('Reims & Verdun', 'France'), 0.005844356787242044),\n",
-       " (('Oban, Mull & Iona', 'Scotland'), 0.009694167677556487),\n",
-       " (('Lake Bled', 'Slovenia'), 0.013411734129390007),\n",
-       " (('Liverpool', 'England'), 0.013911526930349583),\n",
-       " (('Pisa', 'Italy'), 0.017456690379354822)]"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_updated_n_recommendation(user_score, cities_with_scores, random_recs,\n",
-    "                             nearest_neighbor, city, \n",
-    "                             city_rating=[1, -1, 0, 1, 1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
