clean up functions. connect user input to mongodb

--- a/recommend_by_nearest_topic_score.ipynb
+++ b/recommend_by_nearest_topic_score.ipynb
@@ -24,7 +24,8 @@
     "import pickle\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from recommend import get_initial_user_score, recommend_nn, get_random_recs, update_user_score, get_updated_n_recommendation, make_recommendations"
+    "from recommend import make_recommendations\n",
+    "import pymongo"
    ]
   },
   {
@@ -234,91 +235,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "topics = cities_with_scores.drop(['city', 'city_summary', 'country'], axis=1)\n",
-    "city = cities_with_scores[['city', 'country']]"
+    "topics = cities_with_scores.drop(['city', 'city_summary', 'country'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>city</th>\n",
-       "      <th>country</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Danube Valley</td>\n",
-       "      <td>Austria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Hallstatt</td>\n",
-       "      <td>Austria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Salzburg</td>\n",
-       "      <td>Austria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Tirol</td>\n",
-       "      <td>Austria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Vienna</td>\n",
-       "      <td>Austria</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            city  country\n",
-       "0  Danube Valley  Austria\n",
-       "1      Hallstatt  Austria\n",
-       "2       Salzburg  Austria\n",
-       "3          Tirol  Austria\n",
-       "4         Vienna  Austria"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "city.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +251,7 @@
        "                 radius=1.0)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -359,35 +281,23 @@
      "output_type": "stream",
      "text": [
       "Rate on a scale of 0-10. 0 meaning not important and 10 meaning very important\n",
-      "How important is a forest/mountain setting: 1\n",
-      "How important is visiting palaces/castles: 1\n",
-      "How important is a costal/water setting: 1\n",
-      "How important is historical sites: 1\n",
-      "How important is an urban setting: 1\n",
+      "How important is a forest/mountain setting: 2\n",
+      "How important is visiting palaces/castles: 7\n",
+      "How important is a costal/water setting: 8\n",
+      "How important is historical sites: 8\n",
+      "How important is an urban setting: 4\n",
       "\n",
       "\n",
-      "Rate ('St. Petersburg', 'Russia'): 1\n",
-      "Rate ('Berlin', 'Germany'): 1\n",
-      "Rate ('Rothenburg ob der Tauber', 'Germany'): 1\n",
-      "Rate ('Aran Islands', 'Ireland'): 1\n",
-      "Rate ('Ironbridge Gorge', 'England'): 1\n",
-      "Rate ('Warsaw', 'Poland'): 1\n",
-      "Rate ('Florence', 'Italy'): 1\n",
-      "Rate ('Córdoba', 'Spain'): 1\n",
-      "Rate ('Delft', 'Netherlands'): 1\n",
-      "Rate ('Languedoc-Roussillon', 'France'): 1\n",
-      "\n",
-      "\n",
-      "Rate ('Trier', 'Germany'): 1\n",
-      "Rate ('Windsor', 'England'): 1\n",
-      "Rate ('Nice', 'France'): 0\n",
-      "Rate ('Barcelona', 'Spain'): 0\n",
       "Rate ('Portsmouth', 'England'): 0\n",
-      "Rate ('Assisi', 'Italy'): 0\n",
-      "Rate ('Oxford', 'England'): 0\n",
-      "Rate ('London', 'England'): 0\n",
+      "Rate ('Salzburg', 'Austria'): 0\n",
+      "Rate ('Chamonix', 'France'): 0\n",
+      "Rate ('D-Day Beaches', 'France'): 0\n",
+      "Rate ('Honfleur', 'France'): 0\n",
+      "Rate ('Provence', 'France'): 0\n",
+      "Rate ('Derry', 'Ireland'): 0\n",
       "Rate ('Dover', 'England'): 0\n",
-      "Rate ('Aix-en-Provence', 'France'): 0\n",
+      "Rate ('Kinsale & Cobh', 'Ireland'): 0\n",
+      "Rate ('Paris', 'France'): 0\n",
       "\n",
       "\n"
      ]
@@ -395,20 +305,92 @@
     {
      "data": {
       "text/plain": [
-       "[(('Nice', 'France'), 8.542202463557302e-05),\n",
-       " (('D-Day Beaches', 'France'), 0.00037095362344419236),\n",
-       " (('Annecy', 'France'), 0.0009906167687429024),\n",
-       " (('Barcelona', 'Spain'), 0.0017613015708727309),\n",
-       " (('Dover', 'England'), 0.0024208211292320314)]"
+       "[(('Tirol', 'Austria'), 0.027917798415638795),\n",
+       " (('Burgundy', 'France'), 0.034020516398333256),\n",
+       " (('Cinque Terre', 'Italy'), 0.03614211950473756),\n",
+       " (('Oxford', 'England'), 0.03786095105352538),\n",
+       " (('Antibes', 'France'), 0.042506855616720296)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "make_recommendations(cities_with_scores, nearest_neighbor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mc = pymongo.MongoClient()\n",
+    "# city_db = mc['city_database']\n",
+    "# user_coll = city_db['user_collection']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('5d14074cecc3e337d540323f'),\n",
+       " \"('Tuscan Hill Towns', 'Italy')\": 0,\n",
+       " \"('Hallstatt', 'Austria')\": 0,\n",
+       " \"('Villefranche-sur-Mer', 'France')\": 0,\n",
+       " \"('Danube Valley', 'Austria')\": 0,\n",
+       " \"('Aran Islands', 'Ireland')\": 0,\n",
+       " \"('Lake District', 'England')\": 0,\n",
+       " \"('Kilkenny & the Rock of Cashel', 'Ireland')\": 0,\n",
+       " \"('Bruges', 'Belgium')\": 0,\n",
+       " \"('Trier', 'Germany')\": 0,\n",
+       " \"('Munich', 'Germany')\": 0}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#user_coll.find_one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.DeleteResult at 0x1a163e1708>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# to delete from the collection while I am testing functionality\n",
+    "# user_coll.delete_one(user_coll.find_one())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = pd.DataFrame(list(user_coll.find())).fillna(0)\n",
+    "# df"
    ]
   },
   {
