--- a/recommend_by_nearest_topic_score.ipynb
+++ b/recommend_by_nearest_topic_score.ipynb
@@ -29,6 +29,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Data from Pickle File"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -239,6 +246,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train NN-Model on Topic Scores"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -262,6 +276,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For reproducability, load the existing NN-model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -269,6 +290,13 @@
    "source": [
     "#pickle.dump(nearest_neighbor, open('models/nn_model.pkl', 'wb'))\n",
     "nearest_neighbor = pickle.load(open('models/nn_model.pkl', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Make Recommendations"
    ]
   },
   {
@@ -280,24 +308,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rate on a scale of 0-10. 0 meaning not important and 10 meaning very important\n",
-      "How important is a forest/mountain setting: 2\n",
-      "How important is visiting palaces/castles: 7\n",
-      "How important is a costal/water setting: 8\n",
-      "How important is historical sites: 8\n",
-      "How important is an urban setting: 4\n",
+      "Rate on a scale of 0-10.\n",
+      "    0 is not important and 10 is very important\n",
+      "How important is a forest/mountain setting: 10\n",
+      "How important is visiting palaces/castles: 0\n",
+      "How important is a costal/water setting: 0\n",
+      "How important is historical sites: 10\n",
+      "How important is an urban setting: 0\n",
       "\n",
       "\n",
-      "Rate ('Portsmouth', 'England'): 0\n",
-      "Rate ('Salzburg', 'Austria'): 0\n",
-      "Rate ('Chamonix', 'France'): 0\n",
-      "Rate ('D-Day Beaches', 'France'): 0\n",
-      "Rate ('Honfleur', 'France'): 0\n",
-      "Rate ('Provence', 'France'): 0\n",
-      "Rate ('Derry', 'Ireland'): 0\n",
-      "Rate ('Dover', 'England'): 0\n",
-      "Rate ('Kinsale & Cobh', 'Ireland'): 0\n",
-      "Rate ('Paris', 'France'): 0\n",
+      "For the following locations give:\n",
+      "            \t1 if you have visited and liked\n",
+      "            \t-1 if you have visited and disliked\n",
+      "            \t0 if you have never been\n",
+      "Rate ('Danube Valley', 'Austria'): 0\n",
+      "Rate ('Windsor', 'England'): 0\n",
+      "Rate ('Lake District', 'England'): 0\n",
+      "Rate ('Versailles', 'France'): 0\n",
+      "Rate ('Liverpool', 'England'): 0\n",
+      "Rate ('Glasgow', 'Scotland'): 0\n",
+      "Rate ('Luberon', 'France'): 0\n",
+      "Rate ('Dalmatian Coast', 'Croatia'): 0\n",
+      "Rate ('Córdoba', 'Spain'): 0\n",
+      "Rate ('Aarhus', 'Denmark'): 0\n",
       "\n",
       "\n"
      ]
@@ -305,11 +338,11 @@
     {
      "data": {
       "text/plain": [
-       "[(('Tirol', 'Austria'), 0.027917798415638795),\n",
-       " (('Burgundy', 'France'), 0.034020516398333256),\n",
-       " (('Cinque Terre', 'Italy'), 0.03614211950473756),\n",
-       " (('Oxford', 'England'), 0.03786095105352538),\n",
-       " (('Antibes', 'France'), 0.042506855616720296)]"
+       "[(('Lisbon', 'Portugal'), 0.18935845664949824),\n",
+       " (('Albi', 'France'), 0.1977088502069403),\n",
+       " (('Coimbra', 'Portugal'), 0.20470096693168693),\n",
+       " (('Arles', 'France'), 0.21096871167159437),\n",
+       " (('Versailles', 'France'), 0.21180420695097357)]"
       ]
      },
      "execution_count": 6,
@@ -323,63 +356,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mc = pymongo.MongoClient()\n",
+    "# to delete user ratings from the user collection while I am testing functionality\n",
+    "\n",
+    "# mc = pymongo.MongoClient('mongodb+srv://kayli:<password>@travel-recommendation-rnoac.mongodb.net/test?retryWrites=true&w=majority')\n",
     "# city_db = mc['city_database']\n",
-    "# user_coll = city_db['user_collection']"
+    "# user_coll = city_db['user_collection']\n",
+    "\n",
+    "# user_coll.find_one()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_id': ObjectId('5d14074cecc3e337d540323f'),\n",
-       " \"('Tuscan Hill Towns', 'Italy')\": 0,\n",
-       " \"('Hallstatt', 'Austria')\": 0,\n",
-       " \"('Villefranche-sur-Mer', 'France')\": 0,\n",
-       " \"('Danube Valley', 'Austria')\": 0,\n",
-       " \"('Aran Islands', 'Ireland')\": 0,\n",
-       " \"('Lake District', 'England')\": 0,\n",
-       " \"('Kilkenny & the Rock of Cashel', 'Ireland')\": 0,\n",
-       " \"('Bruges', 'Belgium')\": 0,\n",
-       " \"('Trier', 'Germany')\": 0,\n",
-       " \"('Munich', 'Germany')\": 0}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#user_coll.find_one()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pymongo.results.DeleteResult at 0x1a163e1708>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# to delete from the collection while I am testing functionality\n",
     "# user_coll.delete_one(user_coll.find_one())"
    ]
   },
